# grog

./: .gitignore  .gitmodules  .golangci.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  default.nix  dev_log.md  go.mod  go.sum  grog.toml  install.sh  main.go  mise.toml  package.nix  release_notes.sh  run.sh  treefmt.toml
.github/: release-drafter.yml  reset_test_infra.sh  upload_badge.sh
.github/workflows/: homebrew-autoupdate.yml  lint.yml  (+6 more)
docs/: README.md  astro.config.mjs  gen_docs.go  gen_docs_test.go  netlify.toml  package-lock.json  package.json  pkl_grammar.json
examples/python_uv_monorepo/: .gitignore  Makefile  README.md  pyproject.toml
examples/python_uv_monorepo/cli/: BUILD.pkl  Dockerfile  README.md  pyproject.toml
examples/python_uv_monorepo/lib/format/: BUILD.pkl  pyproject.toml
examples/python_uv_monorepo/lib/grog/: BUILD.pkl  python_uv.pkl  uv_image_stage.py
examples/python_uv_monorepo/lib/proto/: build_proto.sh  pyproject.toml
examples/python_uv_monorepo/server/: BUILD.pkl  Dockerfile  pyproject.toml
integration/: README.md  cli_test.go  interrupt_test.go  local_profiling_test.go  profiling_test.go  test_table.yaml
lang/: README.md
pkl/: PklProject  alias.pkl  environment.pkl  helper.pkl  output_check.pkl  package.pkl  platform.pkl  target.pkl  test.pkl
session/: logging.go  push.go  push_test.go  result.go  session.go  session_test.go
terraform-provider-grog/: .goreleaser.yml  README.md  go.mod  go.sum  main.go
(+846 files in other folders)
