[project]
name = "cli"
version = "0.1.0"
description = "Sarcastic text CLI"
readme = "README.md"
dependencies = ["format", "rich>=13.9.4", "typer>=0.15.2"]

[project.scripts]
main = "cli.main:app"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cli"
module-root = ""

[tool.uv.sources]
format = { workspace = true }

[dependency-groups]
dev = []
